# AudioFileTransformer

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  GranulatorProcessor_PSOLA_Migration_Analysis.md  README.md  TODO.md  UPDATE_GIT_EMAIL.md
.claude/: settings.local.json
.github/workflows/: build-macos-arm64.yml  build-macos-x86_64.yml  build-windows.yml
CMAKE/: SOURCES.cmake  TESTS.cmake
DIAGRAMS/: .$Diagram_0.drawio.bkp  Diagram_0.drawio
HELPER_SCRIPTS/: build_app.py  build_tests.py  build_vst3.py  rebuild_all.py  regenSource.py
HELPER_SCRIPTS/TODO_SCRIPTS/: create_item.py
INSTALLERS/PC/: AudioFileTransformer.iss
NOTES/: .$Diagram_0.drawio.bkp  Diagram_0.drawio  GUI_Mockup_0.drawio
OUTPUT/2026-04-30_07-05-46/: Transformation_Data.md
RESOURCES/WEB/: index.html
SOURCE/: BufferProcessingManager.cpp  BufferProcessingManager.h  FileProcessingManager.cpp  FileProcessingManager.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
SOURCE/Audio/: AudioFileProcessor.cpp  AudioFileProcessor.h
SOURCE/Components/: PluginEditor.cpp  PluginEditor.h
SOURCE/Processor/: BufferProcessingManager.cpp  BufferProcessingManager.h  FileProcessingManager.cpp  FileToBufferManager.cpp  FileToBufferManager.h  PluginProcessor.cpp  PluginProcessor.h
SOURCE/TD-PSOLA/: README.md  TD_PSOLA.cpp
SOURCE/TD_PSOLA/: GrainExport.h  TD_PSOLA.cpp  TD_PSOLA.h
SOURCE/Util/: FileUtils.cpp  FileUtils.h  Juce_Header.h  Version.h
TESTS/: test_AudioFileProcessor.cpp  test_BufferProcessingManager.cpp  test_FileProcessing.cpp  test_FileUtils.cpp  test_GranulatorProcessor.cpp  test_PitchDetector.cpp  test_Processor.cpp  test_ProcessorDiagnostic.cpp  test_TD_PSOLA.cpp
TESTS/BUFFER_PROCESSING_MANAGER/: test_BufferProcessingManager.cpp  test_BufferProcessingManager_DataLogger.cpp
TESTS/FILE_TO_BUFFER_MANAGER/: test_FileToBufferManager.cpp
TESTS/GOLDEN/GOLDEN_Female_Scale_1.5/: GOLDEN_Female_Scale_1.5.csv  GOLDEN_Female_Scale_1.5.txt
TESTS/PLUGIN_PROCESSOR/: test_AudioFileTransformerProcessor_DataLogger.cpp  test_Processor.cpp
TESTS/RD/: test_BufferFiller_LoadOverload.cpp  test_BufferWriter_WriteOverload.cpp
TESTS/TD_PSOLA/: test_TD_PSOLA.cpp
TESTS/TEST_UTILS/: TestUtils.cpp  TestUtils.h
TESTS/UTIL/: test_FileUtils.cpp
TODO/: TODO_DASHBOARD.md  _TEMPLATE.md
TODO/.obsidian/: workspace.json
TODO/DONE/: 0001_td-granulator-grain-synth-marks.md  0003_end-to-end.md  0004_hook-up-td-grain-to-pitch-manager.md
TODO/IN_PROGRESS/: 0002_test-window-application-to-grain.md  0008_create-blockaccumulator-class.md
TODO/ITEMS/: 0005_tdpsola-processor-ownership.md  0006_handle-processor-graph-tail-length.md  0007_window-must-be-2x-period.md
