cmake_minimum_required(VERSION 3.24.1)

# Read version from VERSION.txt
file(STRINGS "${CMAKE_CURRENT_SOURCE_DIR}/VERSION.txt" VERSION_STRING)
string(STRIP "${VERSION_STRING}" VERSION_STRING)

# Parse version components
string(REPLACE "." ";" VERSION_LIST ${VERSION_STRING})
list(GET VERSION_LIST 0 PROJECT_VERSION_MAJOR)
list(GET VERSION_LIST 1 PROJECT_VERSION_MINOR)
list(GET VERSION_LIST 2 PROJECT_VERSION_PATCH)

# LANGUAGES must include C — required by JUCE on macOS/Xcode
project(AudioFileTransformer VERSION ${VERSION_STRING} LANGUAGES C CXX)

# C++ Standard
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

# Find Python — resolves to python3 on macOS/Linux, python on Windows
find_package(Python3 REQUIRED)

# JUCE setup
add_subdirectory(SUBMODULES/JUCE)

# Plugin formats — add AU only on macOS
if(APPLE)
    set(FORMATS VST3 AU Standalone)
else()
    set(FORMATS VST3 Standalone)
endif()

# Version header generation
add_custom_target(update_version_header
    COMMAND ${Python3_EXECUTABLE} "${CMAKE_CURRENT_SOURCE_DIR}/HELPER_SCRIPTS/update_version.py"
            "${CMAKE_CURRENT_SOURCE_DIR}/VERSION.txt"
            "${CMAKE_CURRENT_SOURCE_DIR}/SOURCE/Util/Version.h"
    BYPRODUCTS "${CMAKE_CURRENT_SOURCE_DIR}/SOURCE/Util/Version.h"
    COMMENT "Updating version header"
)

# Plugin configuration
juce_add_plugin(AudioFileTransformer
    COMPANY_NAME "recluse-audio"
    BUNDLE_ID com.recluseaudio.audiofiletransformer
    PLUGIN_MANUFACTURER_CODE Rcls
    PLUGIN_CODE Aftr
    FORMATS ${FORMATS}
    PRODUCT_NAME "AudioFileTransformer"
    NEEDS_MIDI_INPUT FALSE
    NEEDS_MIDI_OUTPUT FALSE
    IS_MIDI_EFFECT FALSE
    IS_SYNTH FALSE
    EDITOR_WANTS_KEYBOARD_FOCUS FALSE
    COPY_PLUGIN_AFTER_BUILD FALSE
    VST3_CATEGORIES Fx
)

# Source files (auto-generated by regenSource.py)
include(CMAKE/SOURCES.cmake)
target_sources(AudioFileTransformer PRIVATE ${SOURCES})

# Include directories (for RD submodule to find Util/Juce_Header.h)
target_include_directories(AudioFileTransformer PRIVATE
    ${CMAKE_CURRENT_SOURCE_DIR}/SOURCE
    ${CMAKE_CURRENT_SOURCE_DIR}/SUBMODULES/RD/SOURCE
)

add_dependencies(AudioFileTransformer update_version_header)

target_compile_features(AudioFileTransformer PRIVATE cxx_std_20)

# Link JUCE modules
target_link_libraries(AudioFileTransformer
    PRIVATE
        juce::juce_audio_utils
        juce::juce_audio_processors
        juce::juce_dsp
    PUBLIC
        juce::juce_recommended_config_flags
        juce::juce_recommended_lto_flags
        juce::juce_recommended_warning_flags
)

target_compile_definitions(AudioFileTransformer
    PUBLIC
        JUCE_WEB_BROWSER=0
        JUCE_USE_CURL=0
        JUCE_VST3_CAN_REPLACE_VST2=0
        JUCE_DISPLAY_SPLASH_SCREEN=1
        JUCE_REPORT_APP_USAGE=0
    PRIVATE
        RD_DEBUG_ALL=$<BOOL:${RD_DEBUG_ALL}>
        RD_DEBUG_GRAIN_CREATION=$<BOOL:${RD_DEBUG_GRAIN_CREATION}>
        RD_DEBUG_GRAIN_PROCESSING=$<BOOL:${RD_DEBUG_GRAIN_PROCESSING}>
        RD_DEBUG_PITCH_DETECTION=$<BOOL:${RD_DEBUG_PITCH_DETECTION}>
        RD_DEBUG_SAMPLE_DETAIL=$<BOOL:${RD_DEBUG_SAMPLE_DETAIL}>
        RD_DEBUG_OUTPUT_STATS=$<BOOL:${RD_DEBUG_OUTPUT_STATS}>
        RD_DEBUG_GAIN_PROCESSING=$<BOOL:${RD_DEBUG_GAIN_PROCESSING}>
)

if(MSVC)
    target_compile_options(AudioFileTransformer PRIVATE /W4 /wd4244)
else()
    target_compile_options(AudioFileTransformer PRIVATE -Wall -Wextra -Wpedantic)
endif()

#==============================================================================
# Debug Logging Options (RD submodule)
#==============================================================================
option(RD_DEBUG_ALL "Enable all RD debug logging" OFF)
option(RD_DEBUG_GRAIN_CREATION "Enable grain creation debug logging" OFF)
option(RD_DEBUG_GRAIN_PROCESSING "Enable grain processing debug logging" OFF)
option(RD_DEBUG_PITCH_DETECTION "Enable pitch detection debug logging" OFF)
option(RD_DEBUG_SAMPLE_DETAIL "Enable sample-level debug logging" OFF)
option(RD_DEBUG_OUTPUT_STATS "Enable output statistics logging" OFF)
option(RD_DEBUG_GAIN_PROCESSING "Enable gain processing debug logging" OFF)

#==============================================================================
# Tests (optional)
#==============================================================================
option(BUILD_TESTS "Build unit tests" OFF)

if(BUILD_TESTS OR TARGET Tests)
    include(FetchContent)

    FetchContent_Declare(
        Catch2
        GIT_REPOSITORY https://github.com/catchorg/Catch2.git
        GIT_TAG v3.1.0
    )
    FetchContent_MakeAvailable(Catch2)

    add_executable(Tests)
    include(CMAKE/TESTS.cmake)
    include(CMAKE/SOURCES.cmake)
    target_sources(Tests PRIVATE
        ${TEST_SOURCES}
        ${SOURCES}
        ${CMAKE_CURRENT_SOURCE_DIR}/SUBMODULES/RD/TESTS/TEST_UTILS/TestUtils.cpp
    )

    target_include_directories(Tests PRIVATE
        ${CMAKE_CURRENT_SOURCE_DIR}
        ${CMAKE_CURRENT_SOURCE_DIR}/SOURCE
        ${CMAKE_CURRENT_SOURCE_DIR}/SUBMODULES/RD
        ${CMAKE_CURRENT_SOURCE_DIR}/SUBMODULES/RD/SOURCE
        ${CMAKE_CURRENT_SOURCE_DIR}/SUBMODULES/RD/TESTS
    )

    target_link_libraries(Tests PRIVATE
        Catch2::Catch2WithMain
        juce::juce_audio_utils
        juce::juce_audio_processors
        juce::juce_dsp
    )

    target_compile_features(Tests PRIVATE cxx_std_20)

    if(MSVC)
        target_compile_options(Tests PRIVATE /FS)
    endif()

    target_compile_definitions(Tests PRIVATE
        JUCE_WEB_BROWSER=0
        JUCE_USE_CURL=0
        JUCE_VST3_CAN_REPLACE_VST2=0
        JUCE_MODAL_LOOPS_PERMITTED=1
        JUCE_REPORT_APP_USAGE=0
        JucePlugin_Name="AudioFileTransformer"
        JucePlugin_WantsMidiInput=0
        JucePlugin_ProducesMidiOutput=0
        JucePlugin_IsMidiEffect=0
        JucePlugin_IsSynth=0
        RD_DEBUG_ALL=$<BOOL:${RD_DEBUG_ALL}>
        RD_DEBUG_GRAIN_CREATION=$<BOOL:${RD_DEBUG_GRAIN_CREATION}>
        RD_DEBUG_GRAIN_PROCESSING=$<BOOL:${RD_DEBUG_GRAIN_PROCESSING}>
        RD_DEBUG_PITCH_DETECTION=$<BOOL:${RD_DEBUG_PITCH_DETECTION}>
        RD_DEBUG_SAMPLE_DETAIL=$<BOOL:${RD_DEBUG_SAMPLE_DETAIL}>
        RD_DEBUG_OUTPUT_STATS=$<BOOL:${RD_DEBUG_OUTPUT_STATS}>
        RD_DEBUG_GAIN_PROCESSING=$<BOOL:${RD_DEBUG_GAIN_PROCESSING}>
    )

    include(CTest)
    include(Catch)
    catch_discover_tests(Tests)
endif()
